# django-project-setup

./: .dockerignore  .env.example  .gitlint  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: build.sh  clean_temp.sh  colors.sh  docker_clean.sh  env_create.sh  format.sh  self_documentation.make
src/: celery_config.py
src/app/: settings.py  urls.py
